worked on home page, media page and the team page

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,17 @@
       <title>University of Washington EcoCar</title>
 
       <link rel="stylesheet" href="/css/main.css">
+
+      <!-- bootstrap -->
+      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+      <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+      <script src="/for-slider/css3-mediaqueries.js"></script>
+      <script src="/for-slider/fwslider.js"></script>
+      <!-- Styles -->
+      <link rel="stylesheet" href="/for-slider/fwslider.css" media="all">
+      <!-- Fonts -->
+      <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
 
